# KURS_5

./: README.md  dbmanager.py  funcs.py  main.py  pyproject.toml
